--- a/Pict/app/src/main/res/layout/activity_halaman_utama.xml
+++ b/Pict/app/src/main/res/layout/activity_halaman_utama.xml
@@ -19,19 +19,114 @@
     </android.support.design.widget.AppBarLayout>
 
     <ImageView
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:src="@drawable/icon_store"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:background="@color/list_row_end_color"/>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cv_produk">
+        android:id="@+id/cv_produk"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginHorizontal="10dp"
+        app:cardElevation="4dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_gif"
+                        android:layout_weight="0.25"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="Produk Saya"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:textAlignment="center"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_arrow"
+                android:layout_weight="0.25"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/cv_tambah"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginHorizontal="10dp"
+        app:cardElevation="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_tambah"
+                android:layout_weight="0.25"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="Tambah Produk"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:textAlignment="center"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_arrow"
+                android:layout_weight="0.25"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/cv_pengaturan_akun"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginHorizontal="10dp"
+        app:cardElevation="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_setting"
+                android:layout_weight="0.25"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="Pengaturan Akun"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:textAlignment="center"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_arrow"
+                android:layout_weight="0.25"
+                android:layout_gravity="center"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
