--- a/Pict/app/src/main/res/layout/activity_produk_saya.xml
+++ b/Pict/app/src/main/res/layout/activity_produk_saya.xml
@@ -30,6 +30,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        android:id="@+id/rv_produk_saya"/>
+        android:layout_marginTop="10dp"
+        android:id="@+id/rv_produk_saya"
+        tools:listitem="@layout/list_item_produk_saya"/>
 
 </LinearLayout>
