--- a/Pict/app/src/main/res/layout/activity_register2.xml
+++ b/Pict/app/src/main/res/layout/activity_register2.xml
@@ -1,172 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Petani.RegisterActivity"
     android:background="@color/ijo">
-
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/ic_splash_screen"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="Daftar Sebagai Petani"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        android:id="@+id/tv_daftar"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_bold"/>
-
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_marginHorizontal="20dp"
-        android:orientation="vertical"
-        android:paddingTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_daftar"
-        android:background="@drawable/bg_white"
-        android:layout_marginTop="10dp">
-
-
-        --Text Username
-        <EditText
-            android:id="@+id/tv_nama"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:background="@drawable/ic_border_radius_for_edit_text"
-            android:drawableLeft="@drawable/ic_nama"
-            android:hint="  Nama Anda"
-            android:inputType="text"
-            android:textSize="14dp" />
-
-        <EditText
-            android:id="@+id/tv_no"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/ic_border_radius_for_edit_text"
-            android:drawableLeft="@drawable/ic_phone"
-            android:hint="  No. Whatsapp"
-            android:inputType="textPersonName"
-            android:textSize="14dp" />
-
-        <EditText
-            android:id="@+id/tv_email"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/ic_border_radius_for_edit_text"
-            android:drawableLeft="@drawable/ic_email"
-            android:hint="  Email"
-            android:inputType="textEmailAddress"
-            android:textSize="14dp" />
-
-        --Text Password
-        <EditText
-            android:id="@+id/tv_username"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/ic_border_radius_for_edit_text"
-            android:drawableLeft="@drawable/ic_username"
-            android:hint="  Username"
-            android:inputType="text"
-            android:textSize="14dp" />
-
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/ic_border_radius_for_edit_text"
-            android:drawableLeft="@drawable/ic_password"
-            android:hint="  Password"
-            android:inputType="textPassword"
-            android:textSize="14dp" />
-
-        <EditText
-            android:id="@+id/tv_nama_toko"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/ic_border_radius_for_edit_text"
-            android:drawableLeft="@drawable/ic_store"
-            android:inputType="text"
-            android:hint="  Nama Toko"
-            android:textSize="14dp" />
-
-
-        --Button Login
-        <Button
-            android:id="@+id/btn_daftar"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/ic_border_radius_for_button"
-            android:text="Daftar"
-            android:textAllCaps="false"
-            android:textColor="#fff"
-            android:textSize="18sp" />
+            android:src="@drawable/ic_splash_screen"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Daftar Sebagai Petani"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/iv_logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"
+            android:id="@+id/tv_daftar"
+            android:textColor="@color/black"
+            android:fontFamily="@font/montserrat_bold"/>
 
-        --Text Dont have an account
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:gravity="center">
+            android:layout_marginHorizontal="20dp"
+            android:orientation="vertical"
+            android:paddingTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_daftar"
+            android:background="@drawable/bg_white"
+            android:layout_marginTop="10dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="28dp"
-                android:elevation="4dp"
-                android:paddingTop="5dp"
-                android:text="Sudah memiliki akun ?"
-                android:textSize="14dp"/>
-            <TextView
-                android:id="@+id/idSignin"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="Klik disini"
-                android:textColor="@color/ijo"
-                android:textStyle="bold"
-                android:paddingTop="5dp"
-                android:layout_marginLeft="7dp"
+
+            --Text Username
+            <EditText
+                android:id="@+id/tv_nama"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:background="@drawable/ic_border_radius_for_edit_text"
+                android:drawableLeft="@drawable/ic_nama"
+                android:hint="  Nama Anda"
+                android:inputType="text"
                 android:textSize="14dp" />
 
+            <EditText
+                android:id="@+id/tv_no"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/ic_border_radius_for_edit_text"
+                android:drawableLeft="@drawable/ic_phone"
+                android:hint="  No. Whatsapp"
+                android:inputType="textPersonName"
+                android:textSize="14dp" />
+
+            <EditText
+                android:id="@+id/tv_email"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/ic_border_radius_for_edit_text"
+                android:drawableLeft="@drawable/ic_email"
+                android:hint="  Email"
+                android:inputType="textEmailAddress"
+                android:textSize="14dp" />
+
+            --Text Password
+            <EditText
+                android:id="@+id/tv_username"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/ic_border_radius_for_edit_text"
+                android:drawableLeft="@drawable/ic_username"
+                android:hint="  Username"
+                android:inputType="text"
+                android:textSize="14dp" />
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/ic_border_radius_for_edit_text"
+                android:drawableLeft="@drawable/ic_password"
+                android:hint="  Password"
+                android:inputType="textPassword"
+                android:textSize="14dp" />
+
+            <EditText
+                android:id="@+id/tv_alamat"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/ic_border_radius_for_edit_text"
+                android:drawableLeft="@drawable/ic_store"
+                android:inputType="text"
+                android:hint="  Alamat"
+                android:textSize="14dp" />
+
+            <EditText
+                android:id="@+id/tv_nama_toko"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/ic_border_radius_for_edit_text"
+                android:drawableLeft="@drawable/ic_store"
+                android:inputType="text"
+                android:hint="  Nama Toko"
+                android:textSize="14dp" />
+
+
+            --Button Login
+            <Button
+                android:id="@+id/btn_daftar"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/ic_border_radius_for_button"
+                android:text="Daftar"
+                android:textAllCaps="false"
+                android:textColor="#fff"
+                android:textSize="18sp" />
+
+            --Text Dont have an account
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="28dp"
+                    android:elevation="4dp"
+                    android:paddingTop="5dp"
+                    android:text="Sudah memiliki akun ?"
+                    android:textSize="14dp"/>
+                <TextView
+                    android:id="@+id/idSignin"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="Klik disini"
+                    android:textColor="@color/ijo"
+                    android:textStyle="bold"
+                    android:paddingTop="5dp"
+                    android:layout_marginLeft="7dp"
+                    android:textSize="14dp" />
+
+            </LinearLayout>
+
         </LinearLayout>
-
-    </LinearLayout>
-
-
-
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.NestedScrollView>
