--- a/Pict/app/src/main/res/layout/activity_tambah_produk.xml
+++ b/Pict/app/src/main/res/layout/activity_tambah_produk.xml
@@ -26,11 +26,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/bg_white"
         android:layout_marginHorizontal="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingVertical="20dp">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,8 +53,7 @@
             android:id="@+id/tv_nama"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
+            android:layout_marginHorizontal="10dp"
             android:background="@drawable/ic_border_radius_for_edit_text"
             android:hint="  Nama Anda"
             android:inputType="text"
@@ -63,22 +63,56 @@
             android:id="@+id/tv_deskripsi"
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:layout_marginHorizontal="10dp"
+            android:maxLines="7"
+            android:lines="7"
+            android:textAlignment="viewStart"
             android:background="@drawable/ic_border_radius_for_edit_text"
-            android:hint="  Deskripsi"
-            android:inputType="text"
+            android:hint=" Deskripsi"
+            android:inputType="textMultiLine"
+            android:gravity="top|start"
             android:textSize="14dp"
             android:layout_marginTop="10dp"/>
-        <EditText
-            android:id="@+id/tv_kategori"
+        <Spinner
+            android:id="@+id/spin_kategori"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
+            android:layout_marginHorizontal="10dp"
             android:background="@drawable/ic_border_radius_for_edit_text"
-            android:hint="  Nama Anda"
             android:inputType="text"
             android:textSize="14dp"
             android:layout_marginTop="10dp"/>
+
+        <EditText
+            android:id="@+id/tv_harga"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/ic_border_radius_for_edit_text"
+            android:hint=" Harga"
+            android:inputType="number"
+            android:layout_marginTop="10dp"/>
+        <EditText
+            android:id="@+id/tv_berat"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/ic_border_radius_for_edit_text"
+            android:hint=" Berat (gram)"
+            android:inputType="number"
+            android:layout_marginTop="10dp"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/btn_daftar"
+            android:background="@drawable/bg_button_ungu"
+            android:text="Simpan"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="18sp"
+            android:layout_marginHorizontal="20dp"
+            android:textColor="@color/list_row_end_color"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"/>
     </LinearLayout>
 
 </LinearLayout>
