--- a/Pict/app/src/main/res/layout/activity_halaman_utama.xml
+++ b/Pict/app/src/main/res/layout/activity_halaman_utama.xml
@@ -39,12 +39,12 @@
             android:orientation="horizontal"
             android:padding="10dp">
                     <ImageView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:src="@drawable/ic_gif"
-                        android:layout_weight="0.25"/>
+                        android:layout_weight="0.1"/>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="Produk Saya"
@@ -52,10 +52,10 @@
                 android:layout_gravity="center"
                 android:textAlignment="center"/>
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_arrow"
-                android:layout_weight="0.25"
+                android:layout_weight="0.1"
                 android:layout_gravity="center"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -74,12 +74,12 @@
             android:orientation="horizontal"
             android:padding="10dp">
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_tambah"
-                android:layout_weight="0.25"/>
+                android:layout_weight="0.1"/>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="Tambah Produk"
@@ -87,10 +87,10 @@
                 android:layout_gravity="center"
                 android:textAlignment="center"/>
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_arrow"
-                android:layout_weight="0.25"
+                android:layout_weight="0.1"
                 android:layout_gravity="center"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -109,12 +109,12 @@
             android:orientation="horizontal"
             android:padding="10dp">
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_setting"
-                android:layout_weight="0.25"/>
+                android:layout_weight="0.1"/>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="Pengaturan Akun"
@@ -122,10 +122,10 @@
                 android:layout_gravity="center"
                 android:textAlignment="center"/>
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_arrow"
-                android:layout_weight="0.25"
+                android:layout_weight="0.1"
                 android:layout_gravity="center"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
