--- a/Pict/app/src/main/res/layout/fragment_pembeli_profile.xml
+++ b/Pict/app/src/main/res/layout/fragment_pembeli_profile.xml
@@ -1,14 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".pembeli.PembeliProfileFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
+        android:id="@+id/img_pembeli"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="200dp"
+        android:src="@drawable/icon_store"
+        android:layout_gravity="center"
+        android:background="@color/list_row_end_color"/>
+    <TextView
+        android:id="@+id/user_pembeli"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Produk Saya"
+        android:layout_marginHorizontal="15dp"
+        android:textSize="20sp"/>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/cv_profilpembeli"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginHorizontal="10dp"
+        app:cardElevation="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_edit_24"
+                android:layout_weight="0.1"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="   Ubah Profil"
+                android:textSize="20sp"
+                android:layout_gravity="center"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_arrow"
+                android:layout_weight="0.1"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-</FrameLayout>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/cv_kebijakan_pembeli"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginHorizontal="10dp"
+        app:cardElevation="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_apps_24"
+                android:layout_weight="0.1"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="   Kebijakan Aplikasi"
+                android:textSize="20sp"
+                android:layout_gravity="center"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_arrow"
+                android:layout_weight="0.1"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/cv_info_pembeli"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginHorizontal="10dp"
+        app:cardElevation="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_info"
+                android:layout_weight="0.1"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="   Informasi"
+                android:textSize="20sp"
+                android:layout_gravity="center"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_arrow"
+                android:layout_weight="0.1"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:id="@+id/btn_logout_pembeli"
+        android:text="keluar"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/bg_button_ungu"
+        android:textSize="20sp"
+        android:textColor="@color/list_row_hover_end_color"
+        android:layout_marginTop="30dp"/>
+</LinearLayout>
