--- a/Pict/app/src/main/res/layout/activity_detail_produk.xml
+++ b/Pict/app/src/main/res/layout/activity_detail_produk.xml
@@ -20,7 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_bold"
-                android:text="Kebijakan Aplikasi"
+                android:text="Detail Produk"
                 android:textColor="@color/black"
                 android:textSize="20sp"/>
         </android.support.v7.widget.Toolbar>
