--- a/Pict/app/src/main/res/layout/activity_login2.xml
+++ b/Pict/app/src/main/res/layout/activity_login2.xml
@@ -33,7 +33,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="360dp"
+        android:layout_height="300dp"
         android:layout_marginHorizontal="20dp"
         android:orientation="vertical"
         android:paddingTop="30dp"
@@ -44,7 +44,7 @@
 
         --Text Username
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/et_userpetani"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginLeft="12dp"
@@ -52,25 +52,12 @@
             android:background="@drawable/ic_border_radius_for_edit_text"
             android:drawableLeft="@drawable/ic_username"
             android:hint="  Username"
-            android:inputType="textPersonName"
-            android:textSize="14dp" />
-
-        <EditText
-            android:id="@+id/nama_toko"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/ic_border_radius_for_edit_text"
-            android:drawableLeft="@drawable/ic_store"
-            android:hint="  Nama Toko"
             android:textSize="14dp" />
 
 
         --Text Password
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/et_passpetani"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginLeft="12dp"
