--- a/Pict/app/src/main/res/layout/activity_tambah_produk.xml
+++ b/Pict/app/src/main/res/layout/activity_tambah_produk.xml
@@ -40,10 +40,12 @@
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:id="@+id/iv_produk"
                 android:src="@drawable/ic_tambah"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/tv_poto"
                 android:text="Foto Produk"
                 android:textSize="30sp"
                 android:fontFamily="@font/montserrat_bold"
@@ -55,7 +57,7 @@
             android:layout_height="48dp"
             android:layout_marginHorizontal="10dp"
             android:background="@drawable/ic_border_radius_for_edit_text"
-            android:hint="  Nama Anda"
+            android:hint="  Nama Produk "
             android:inputType="text"
             android:textSize="14dp"
             android:layout_marginTop="10dp"/>
@@ -73,14 +75,14 @@
             android:gravity="top|start"
             android:textSize="14dp"
             android:layout_marginTop="10dp"/>
-        <Spinner
+        <EditText
             android:id="@+id/spin_kategori"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:hint="Kategori Sayur"
             android:layout_marginHorizontal="10dp"
             android:background="@drawable/ic_border_radius_for_edit_text"
             android:inputType="text"
-            android:textSize="14dp"
             android:layout_marginTop="10dp"/>
 
         <EditText
@@ -104,7 +106,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:id="@+id/btn_daftar"
+            android:id="@+id/btn_simpan"
             android:background="@drawable/bg_button_ungu"
             android:text="Simpan"
             android:fontFamily="@font/montserrat_bold"
