--- a/Pict/app/src/main/res/layout/list_item_produk_saya.xml
+++ b/Pict/app/src/main/res/layout/list_item_produk_saya.xml
@@ -46,6 +46,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/tv_kategori"
             android:text="Kategori : Sayur Daun"
             android:fontFamily="@font/montserrat"
             android:textSize="16sp"
@@ -80,7 +81,7 @@
             android:textColor="@color/list_row_end_color"
             android:layout_marginEnd="30dp"
             app:layout_constraintTop_toBottomOf="@id/tv_stock"
-            app:layout_constraintStart_toEndOf="@id/btn_ubah"
+            app:layout_constraintStart_toEndOf="@id/btn_hapus"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"/>
 
