--- a/Pict/app/src/main/res/layout/list_item_produk_saya.xml
+++ b/Pict/app/src/main/res/layout/list_item_produk_saya.xml
@@ -81,7 +81,7 @@
             android:textColor="@color/list_row_end_color"
             android:layout_marginEnd="30dp"
             app:layout_constraintTop_toBottomOf="@id/tv_stock"
-            app:layout_constraintStart_toEndOf="@id/btn_hapus"
+            app:layout_constraintStart_toEndOf="@id/btn_ubah"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"/>
 
