--- a/Pict/app/src/main/res/layout/activity_get_started_masuk.xml
+++ b/Pict/app/src/main/res/layout/activity_get_started_masuk.xml
@@ -39,6 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp">
         <Button
+            android:id="@+id/btn_pembeli"
             android:layout_width="120dp"
             android:layout_height="50dp"
             android:background="@drawable/bg_button_ungu"
