--- a/Pict/app/src/main/res/layout/activity_update_produk.xml
+++ b/Pict/app/src/main/res/layout/activity_update_produk.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Petani.TambahProdukActivity"
+    tools:context=".Petani.UpdateProdukActivity"
     android:orientation="vertical"
     android:background="@color/ijo">
     <android.support.design.widget.AppBarLayout
@@ -18,7 +18,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tambah Produk"
+                android:text="Update Produk"
                 android:fontFamily="@font/montserrat_bold"
                 android:textSize="20sp"/>
         </android.support.v7.widget.Toolbar>
@@ -45,14 +45,6 @@
                     android:layout_height="100dp"
                     android:id="@+id/iv_produk"
                     android:src="@drawable/ic_tambah"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_poto"
-                    android:text="Foto Produk"
-                    android:textSize="30sp"
-                    android:fontFamily="@font/montserrat_bold"
-                    android:layout_gravity="center"/>
             </LinearLayout>
             <EditText
                 android:id="@+id/tv_nama"
@@ -111,6 +103,7 @@
                 android:hint=" Berat (gram)"
                 android:inputType="numberDecimal"
                 android:layout_marginTop="10dp"
+                android:padding="10dp"
                 android:textSize="14dp"/>
 
             <EditText
