--- a/Pict/app/src/main/res/layout/fragment_pembeli_profile.xml
+++ b/Pict/app/src/main/res/layout/fragment_pembeli_profile.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/ijo"
     tools:context=".pembeli.PembeliProfileFragment">
     <ImageView
         android:id="@+id/img_pembeli"
@@ -63,6 +64,7 @@
         android:layout_marginHorizontal="10dp"
         app:cardElevation="4dp">
         <LinearLayout
+            android:id="@+id/keb_app"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
