--- a/Pict/app/src/main/res/layout/item_list_for_profile.xml
+++ b/Pict/app/src/main/res/layout/item_list_for_profile.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="2dp">
+    android:layout_margin="10dp"
+    app:cardElevation="5dp"
+    android:padding="2dp"
+    android:id="@+id/cardView_posting">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        app:cardElevation="5dp"
+        android:layout_height="230dp"
         android:layout_margin="6dp"
         android:clipToPadding="false"
         android:clickable="true"
         android:focusable="true"
-        android:id="@+id/cardView_posting">
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="match_parent"
@@ -29,13 +31,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Caption"
-            android:layout_marginTop="165dp"
             android:layout_marginLeft="5dp"
-            android:textSize="10dp"
-            android:textStyle="italic"
-            android:id="@+id/captionprofile"
+            android:textSize="16dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:id="@+id/nama_pro"
+            android:maxLines="1"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Caption"
+            android:textColor="@color/ijo"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:textSize="14dp"
+            android:fontFamily="@font/montserrat_med"
+            android:id="@+id/hargaproduk"
             android:maxLines="1"/>
 
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
-</RelativeLayout>
+</android.support.v7.widget.CardView>
