--- a/Pict/app/src/main/res/menu/menu_pembeli.xml
+++ b/Pict/app/src/main/res/menu/menu_pembeli.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/id_home"
+        android:id="@+id/p_home"
         android:title="@string/home"
         android:icon="@drawable/ic_home"/>
     <item
-        android:id="@+id/id_profile"
+        android:id="@+id/p_profile"
         android:title="Akun Saya"
         android:icon="@drawable/ic_profile"/>
 
