--- a/Pict/app/src/main/res/layout/activity_etalase.xml
+++ b/Pict/app/src/main/res/layout/activity_etalase.xml
@@ -53,16 +53,20 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/tv_nama_toko"
                     android:text="Jaya Karya"
                     android:textAllCaps="true"
                     android:layout_marginVertical="7dp"
-                    android:textSize="24sp"/>
+                    android:textSize="24sp"
+                    android:fontFamily="@font/montserrat"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/tv_desc_toko"
                     android:text="Deskripsi Produk"
                     android:layout_gravity="center_vertical"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp"
+                    android:fontFamily="@font/montserrat"/>
             </LinearLayout>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_etalase"
