--- a/Pict/app/src/main/res/layout/activity_pembeli_profile.xml
+++ b/Pict/app/src/main/res/layout/activity_pembeli_profile.xml
@@ -44,13 +44,14 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
             android:layout_marginTop="16dp"
+            android:layout_marginRight="12dp"
             android:background="@drawable/ic_border_radius_for_edit_text"
-            android:drawableLeft="@drawable/ic_password"
+            android:drawableLeft="@drawable/ic_profile"
             android:hint="  Nama"
-            android:inputType="textPassword"
+            android:inputType="text"
             android:textSize="14dp" />
+
         <EditText
             android:id="@+id/nomer_pembeli"
             android:layout_width="match_parent"
@@ -59,9 +60,9 @@
             android:layout_marginRight="12dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/ic_border_radius_for_edit_text"
-            android:drawableLeft="@drawable/ic_password"
+            android:drawableLeft="@drawable/ic_phone"
             android:hint="  No. Whatsapp"
-            android:inputType="textPassword"
+            android:inputType="number"
             android:textSize="14dp" />
         <EditText
             android:id="@+id/alamat_pembeli"
@@ -71,9 +72,9 @@
             android:layout_marginRight="12dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/ic_border_radius_for_edit_text"
-            android:drawableLeft="@drawable/ic_password"
+            android:drawableLeft="@drawable/ic_home"
             android:hint="  Alamat"
-            android:inputType="textPassword"
+            android:inputType="text"
             android:textSize="14dp" />
         <LinearLayout
             android:id="@+id/btn_ubahpass"
