--- a/Pict/app/src/main/res/layout/item_list_for_profile.xml
+++ b/Pict/app/src/main/res/layout/item_list_for_profile.xml
@@ -8,7 +8,7 @@
     android:layout_margin="10dp"
     app:cardElevation="5dp"
     android:padding="2dp"
-    android:id="@+id/cardView_posting"
+    android:id="@+id/cv_produk"
     app:cardCornerRadius="5dp"
     android:elevation="5dp">
 
