--- a/Pict/app/src/main/res/values/colors.xml
+++ b/Pict/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="ijo">#71E428</color>
     <color name="ijo_gelap">#66CF23</color>
     <color name="black">#000</color>
+    <color name="white">#ffffff</color>
 
 </resources>
