--- a/Pict/app/src/main/res/layout/activity_detail_produk.xml
+++ b/Pict/app/src/main/res/layout/activity_detail_produk.xml
@@ -47,20 +47,24 @@
                 android:text="Kubis"
                 android:layout_marginVertical="7dp"
                 android:layout_marginHorizontal="15dp"
-                android:textSize="22sp"/>
+                android:textSize="22sp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/black"/>
             <TextView
                 android:id="@+id/hrg_produk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Rp. 10,000"
                 android:layout_marginHorizontal="15dp"
-                android:textSize="24sp"/>
+                android:textSize="16sp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/black"/>
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="7dp"
-                android:elevation="5dp"
+                app:cardElevation="8dp"
                 app:cardCornerRadius="6dp">
                 <LinearLayout
                     android:id="@+id/toko"
@@ -78,9 +82,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Jaya Karsa"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/montserrat"
+                        android:textColor="@color/black"
                         android:layout_gravity="center_vertical"
                         android:layout_marginHorizontal="15dp"
+                        android:drawableEnd="@drawable/ic_arrow"
                         android:textSize="20sp"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -89,7 +95,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Deskripsi Produk"
-                android:textStyle="bold"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/black"
                 android:layout_gravity="center_vertical"
                 android:layout_marginHorizontal="10dp"
                 android:textSize="20sp"/>
@@ -98,10 +105,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Deskripsi Produk"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/black"
                 android:layout_gravity="center_vertical"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginVertical="7dp"
-                android:textSize="20sp"/>
+                android:textSize="16sp"/>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
     <Button
@@ -114,6 +123,7 @@
         android:background="@drawable/bg_button_ungu"
         android:textSize="20sp"
         android:layout_marginBottom="10dp"
+        android:fontFamily="@font/montserrat_bold"
         android:layout_centerHorizontal="true"
         android:textColor="@color/list_row_hover_end_color"
         android:layout_marginTop="30dp"/>
