--- a/Pict/app/src/main/res/layout/activity_tambah_produk.xml
+++ b/Pict/app/src/main/res/layout/activity_tambah_produk.xml
@@ -102,16 +102,18 @@
                 android:layout_marginTop="10dp"
                 android:padding="10dp"
                 android:textSize="14dp"/>
+
             <EditText
                 android:id="@+id/tv_berat"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/ic_border_radius_for_edit_text"
                 android:hint=" Berat (gram)"
+                android:padding="10dp"
                 android:inputType="numberDecimal"
-                android:layout_marginTop="10dp"
-                android:textSize="14dp"/>
+                android:textSize="14dp" />
 
             <EditText
                 android:id="@+id/tv_stok"
