--- a/Pict/app/src/main/res/layout/item_list_for_profile.xml
+++ b/Pict/app/src/main/res/layout/item_list_for_profile.xml
@@ -6,11 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    app:cardElevation="5dp"
+    app:cardElevation="8dp"
     android:padding="2dp"
     android:id="@+id/cv_produk"
-    app:cardCornerRadius="5dp"
-    android:elevation="5dp">
+    app:cardCornerRadius="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
